apps/anubis-api/base/ingressclass.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: anubis-external-lb
spec:
  controller: ingress.k8s.aws/alb
