apps/anubis-api/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: anubis-api-service
  namespace: default
spec:
  type: ClusterIP # 🌐 Instructs AWS to provision a real cloud load balancer route
  selector:
    app: anubis-api
  ports:
    - protocol: TCP
      port: 80        # The public port the outside world hits in their browser
      targetPort: 8080 # The internal port your Python web server script listens on
