apps/anubis-api/base/webhook-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flux-webhook-ingress
  namespace: flux-system  # Let's see if this works
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    # Links this ingress to the same physical AWS Load Balancer URL
    alb.ingress.kubernetes.io/group.name: anubis-ingress-group
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /hook/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: webhook-receiver
                port:
                  number: 80
